fix: adjust font sizes in gallery component for improved readability

--- a/src/app/gallery/Gallery.module.scss
+++ b/src/app/gallery/Gallery.module.scss
@@ -189,7 +189,7 @@
 }
 
 .categoryTitle {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     /* Reducido el tamaño de fuente */
     margin-top: 0.8rem;
     /* Reducido el margen superior */
